[package]
name = "space-menace"
version = "0.1.0"
authors = ["Kumar Ankur <kmrankur@outlook.com>"]
edition = "2018"

[dependencies]
amethyst = { version = "0.11.0", features = ["nightly", "json"] }
serde = "*"
log = "*"
specs-derive = "*"
specs-physics= { version = "0.3.0", features = ["amethyst"] }

[features]
default = ["metal"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

